# EjerciciosLibro

./: CMakeLists.txt  Complejo.hpp  Complejo.ixx  Config.cmake.in  EjerciciosLibro.cpp  EjerciciosLibro.h.in  EjerciciosLibro.sln  EjerciciosLibro.vcxproj  EjerciciosLibro.vcxproj.filters  Vector.cpp  Vector.h  Vector.ixx  compilaCabeceraSistema.sh  ficheroPrueba.cpp  ficheroPrueba.h  haz.bat  segundaVuelta.cpp  segundaVuelta.h
libtest/: CMakeLists.txt  HazTabla.cmake  HazTabla.cpp  alea.cpp  alea.h  crc16.cpp  crc16.h  libreriaPruebas.cpp  libreriaPruebas.h
